--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@ pom.xml
 .lein-deps-sum
 .lein-failures
 .lein-plugins
+.lein-repl-history
 .classpath
 .project
 .settings
 .DS_Store
+instagram-api.iml
+.idea
